[gd_scene load_steps=5 format=3 uid="uid://deb03q4yaf306"]

[ext_resource type="Script" path="res://characters/actor.gd" id="1_61yri"]
[ext_resource type="Shader" path="res://characters/colorize.gdshader" id="2_1grqu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lbf0d"]
shader = ExtResource("2_1grqu")
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgcas"]
size = Vector2(20, 28)

[node name="Actor" type="Node2D" node_paths=PackedStringArray("sprite", "eyes", "outline")]
script = ExtResource("1_61yri")
sprite = NodePath("Sprite")
eyes = NodePath("Eyes")
outline = NodePath("Outline")

[node name="Outline" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_lbf0d")
scale = Vector2(1.1, 1.1)

[node name="Sprite" type="AnimatedSprite2D" parent="."]

[node name="Eyes" type="AnimatedSprite2D" parent="."]
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_mgcas")

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
